# fedem-solvers

./: .gitmodules  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.reuse/: dep5
PythonAPI/: .pylintrc  CMakeLists.txt  MANIFEST.in  README.md  mypy.ini  pip.conf  pyproject.toml  requirements-dev.txt  requirements-to-freeze.txt  requirements.txt  setup.py  tox.ini  wss-unified-agent.config
PythonAPI/PythonAPITests/: CMakeLists.txt  README.md  test_Microbatch.py  test_api.py  test_extfunc.py  test_fmx.py  test_reducer.py  test_restart.py  test_utils.py
PythonAPI/cfg/: import.ais
PythonAPI/doc/: insertFedemVersion.sh  make.bat  make.sh
PythonAPI/doc/source/: conf.py  divergence.rst  dts_operators.rst  exporter.rst  fmm.rst  fmm_solver.rst  howto-install.rst  howto-modeling.rst  howto-solving.rst  howtos.rst  index.rst  inverse.rst  modeler.rst  modules.rst  reducer.rst  solver.rst  write_fmx.rst  yaml_parser.rst
PythonAPI/src/fedempy/: divergence.py  enums.py  exporter.py  fmm.py  fmm_solver.py  inverse.py  log_conf.py  modeler.py  reducer.py  solver.py  write_fmx.py  yaml_parser.py
PythonAPI/test/: __init__.py  test_dummy.py
src/: CMakeLists.txt  Doxyfile.solver  pFUnitExtra.f90.in  pFUnitExtraArg.f90
src/FFTPack/: CMakeLists.txt  LICENSE  README.md
src/FMU/: CMakeLists.txt  fmu_template.C
src/FMU/FMI2/: README.md
src/Femlib/: CMakeLists.txt  andes3ShellModule.f90  andes4ShellModule.f90  beam.f  beamaux.f  compositeTypeModule.f90  congruenceTrans56.f90  cstetra.f90  dadcos.f  dinv12.f  fqs.f  fts.f  ftsa.f  hexa.f  hlst.f  ihex.f  ipri.f  ipri6.f90  isoMatModule.f90  itet.f  jaci31.f  nyteba.f  pmatStiff.f90  qbek.f  qmrf.f  scqs.f  scts.f  tmrf.f
src/Femlib/FemLibTests/: CMakeLists.txt  linkTest.f90  testANDES.pf  testCongruenceTrans56.pf  testFqtS.pf  testSCqtS.pf
src/OP2converter/: CMakeLists.txt  convert_cms.f  convertmain.C  readmat.f
src/SolutionMapper/: CMakeLists.txt  HOWTO-submodel.md  main.C
src/vpmCommon/: CMakeLists.txt  FFCmdLineArgInterface.C  FFCmdLineArgInterface.H  SignalHandler.C  SignalHandler.H  cmdLineArgInit.C  cmdLineArgInitStd.C  environmentTypeModule.f90  headingNamelistModule.f90  idTypeModule.f90  prescribedMotionModule.f90  rdbModule.f90  samModule.f90  supElTypeModule.f90  triadTypeModule.f90  versionModule.f90
src/vpmCommon/vpmLinAlg/: CMakeLists.txt  asmExtensionModule.f90  feDataModule.f90  feDataRoutines.f90  feLanczosModule.f90  matExtensionModule.f90  solExtensionModule.f90  sprExtensionModule.f90  sysMatrixTypeModule.f90
src/vpmGraphExp/: CMakeLists.txt  exportmain.C
src/vpmReducer/: CMakeLists.txt  cfemFedemModule.f90  cfemReducer.f90  cmstrs.f90  fmxWriter.f90  inadd.f90  inputReducerModule.f90  reducer.f90  reducerInterface.C  reducermain.C  releaseSingeltons.C  rigidModule.f90  samReducerModule.f90  saveReducerModule.f90  solver.f90  solvermain.C  wavgmModule.f90
src/vpmReducer/vpmReducerTests/: CMakeLists.txt  smallReducer.f90  solveSupel.f90  testModels.C  testReducer.C  testScatGath.pf  testShells.C  test_FEsolve.C
src/vpmSolver/: CMakeLists.txt  FNVmodule.f90  FNVwaveForceModule.f90  HWAFLSmanager.C  addInSysModule.f90  bushingElementRoutinesModule.f90  bushingElementTypeModule.f90  contactElementRoutinesModule.f90  contactElementTypeModule.f90  contactSurfaceModule.f90  controlRoutinesModule.f90  controlTypeModule.f90  corotUtilModule.f90  curvePointTypeModule.f90  curveTypeModule.f90  damperRoutinesModule.f90  damperTypeModule.f90  dbgUnitsModule.f90  diffractionModule.f90  dummyLoadSupelMatrix.f90  dummyResStressModule.f90  dummy_pyplot.f90  energyInt.f90  engineRoutinesModule.f90  environmentTypeModule.f90  extCtrlSysRoutinesModule.f90  extCtrlSysTypeModule.f90  finiteElementModule.f90  forceRoutinesModule.f90  forceTypeModule.f90  freqResponseModule.f90  frictionRoutinesModule.f90  frictionTypeModule.f90  functionTypeModule.f90  genericPartModule.f90  hydroDynamicsModule.f90  initiateBushingElmTypeModule.f90  initiateContactElmTypeModule.f90  initiateDamperTypeModule.f90  initiateFrictionTypeModule.f90  (+59 more)
src/vpmSolver/Control/: CMakeLists.txt  checkParam.f90  dgetol.f  fcn.f  ioModule.f90  modxx.f  rsfed.f  wrimat.f
src/vpmSolver/JDTire/: CMakeLists.txt  JD_dataModules.f90  JD_dostire.f  JD_dummy.f90  JD_namelistModule.f90  JD_tireRoutines.f90  JD_tireRoutinesModule.f90
src/vpmSolver/ResponsePos/: CMakeLists.txt  dummies.f90  main.C  postproc.sh  response_pos.f90
src/vpmSolver/vpmSolverTests/: CMakeLists.txt  compareResponse.C  createTestFnd.C  dummy2Modules.f90  dummyModules.f90  testBeam.pf  testExternal.C  testFSIreader.pf  testInverse.C  testMemcheck.C  testMotion.pf  testRestart.C  testSmoothRamp.pf  testSolveIter.C  test_solver.C  xerbla.f
src/vpmStress/: CMakeLists.txt  displacementModule.f90  elStressModule.f90  fatigueModule.f90  fpp.f90  fppModule.f90  fppmain.C  gage.f90  gagemain.C  initiateTriadAndSupElTypeModule.f90  modes.f90  modesRoutines.f90  modesmain.C  readStress.C  resStressModule.f90  samStressModule.f90  saveNastranModule.f90  saveStrainCoatModule.f90  saveStrainGageModule.f90  saveStressModule.f90  saveVTFModule.f90  strainAndStressUtils.f90  strainCoatModule.f90  strainGageModule.f90  strainRosetteModule.f90  stress.f90  stressInterface.C  stressRoutines.f90  stressmain.C
src/vpmStress/vpmStressTests/: CMakeLists.txt  ffl.f90  testThickShell.pf
src/vpmUtilities/: CMakeLists.txt  allocationModule.f90  binaryDB.c  binaryDBInterface.f90  clksec.c  closeLogFiles.f90  computerConfig.C  computerConfigInterface.f90  denseMatrixModule.f90  diskMatrixModule.f90  fileUtilitiesModule.f90  inputUtilities.f90  kindModule.f90  manipMatrixModule.f90  progressModule.f90  reportErrorModule.f90  rotationModule.f90  sDiskMatrixModule.f90  scratchArrayModule.f90  searchAndSortModule.f90  sparseMatrixInterface.f90  sparseMatrixModule.f90  sparseMatrixUtils.C  timerModule.f90  wrimsg.f90
src/vpmUtilities/vpmUtilitiesTests/: CMakeLists.txt  dmOpenTest.f90  putCharTest.f90  rotationTest.f90  testBmatrix.pf  testRotation.pf  usage.f90  writeBinaryTest.f90
(+66 files in other folders)
